--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
 	<meta name = "author" content  = "Nelson, Minh, Joy and Tom" />
 	<title> Home Page </title>
-	<link href = "styles/style.css" rel = "stylesheet"/>
+	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
 	<h1> Welcome Page </h1>
