quiz and update on footer

--- a/index.html
+++ b/index.html
@@ -18,12 +18,34 @@
 		</nav>
 	</header>
 	
+	<h1>Voice Technology</h1>
+	<h2>Voice Technology and Function</h2>
+	<p>Voice technology is normally referred to as voice search or voice recognition software. They are programs that can recognise and record audible commands of the human language and translate them into code, computer language, that can interact with other programs.</p>
+	
+	<div><strong>Features:</strong>
+		<div><strong>Benefits:</strong>
+			<ul>
+				<li>useful for those with disabilities (especially for the eyes and limbs)</li>
+				<li>can be connected to other devices and smart appliances, which helps to complete tasks more easily and efficiently</li>
+				<li>very convenient</li>
+				<li>can remember previous interactions and become more suitable to a person the longer they use it</li>
+			</ul>	
+			<strong>Cons:</strong>
+			<ul>
+				<li>expensive, since they usually come as a function of smart devices
+				</li>
+				<li>there are some inaccuracy in their voice recognitions</li>
+				<li>many tasks cannot be done through voice technology due to the complexity of the programming involved</li>
+			</ul>
+		</div>
+	</div>
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
 		<a href = "mailto:augiaminh14@gmail.com"> Minh </a>
 		<a href = "mailto:joycmena@gmail.com"> Joy </a>
 		<a href = "mailto:thinhd464@gmail.com"> Tom </a>
+		<a href = "mailto:uzmanshafifassy@gmail.com"> Uzman </a>
 	</footer>
 </body>
 </html>
