--- a/topic.html
+++ b/topic.html
@@ -23,6 +23,7 @@
 		<a href = "mailto:augiaminh14@gmail.com"> Minh </a>
 		<a href = "mailto:joycmena@gmail.com"> Joy </a>
 		<a href = "mailto:thinhd464@gmail.com"> Tom </a>
+		<a href = "mailto:uzmanshafifassy@gmail.com"> Uzman </a>
 	</footer>
 </body>
 </html>
