--- a/topic.html
+++ b/topic.html
@@ -4,7 +4,8 @@
 	<meta charset = "utf-8" />
 	<meta name = "description" content = "Assignment Part 1"/>
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
-	<meta name = "author" content  = "Nelson, Minh, Joy and Tom" />
+	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
+	<link href = "style.css" rel = "stylesheet" />
 	<title> Home Page </title>
 </head>
 <body>
@@ -14,6 +15,7 @@
 			<a href = "index.html"> Home </a>
 			<a href = "topic.html"> Topic </a>
 			<a href = "quiz.html"> Quiz </a>
+			<a href = "enhancements.html"> Enhancement </a>
 		</nav>
 	</header>
 	<h2> Sub-Header Example </h2>
