--- a/index.html
+++ b/index.html
@@ -4,41 +4,25 @@
 	<meta charset = "utf-8" />
 	<meta name = "description" content = "Assignment Part 1 Welcome Page"/>
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
-	<meta name = "author" content  = "Nelson, Minh, Joy and Tom" />
+	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
 	<title> Home Page </title>
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
-	<h1> Welcome Page </h1>
+	<h1> Voice Technology </h1>
 	<header>
 		<nav>
 			<a href = "index.html"> Home </a>
 			<a href = "topic.html"> Topic </a>
 			<a href = "quiz.html"> Quiz </a>
+			<a href = "enhancements.html"> Enhancement </a>
 		</nav>
 	</header>
 	
-	<h1>Voice Technology</h1>
-	<h2>Voice Technology and Function</h2>
-	<p>Voice technology is normally referred to as voice search or voice recognition software. They are programs that can recognise and record audible commands of the human language and translate them into code, computer language, that can interact with other programs.</p>
-	
-	<div><strong>Features:</strong>
-		<div><strong>Benefits:</strong>
-			<ul>
-				<li>useful for those with disabilities (especially for the eyes and limbs)</li>
-				<li>can be connected to other devices and smart appliances, which helps to complete tasks more easily and efficiently</li>
-				<li>very convenient</li>
-				<li>can remember previous interactions and become more suitable to a person the longer they use it</li>
-			</ul>	
-			<strong>Cons:</strong>
-			<ul>
-				<li>expensive, since they usually come as a function of smart devices
-				</li>
-				<li>there are some inaccuracy in their voice recognitions</li>
-				<li>many tasks cannot be done through voice technology due to the complexity of the programming involved</li>
-			</ul>
-		</div>
-	</div>
+	<p>
+		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>. In this 
+	</p>
+
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
