--- a/quiz.html
+++ b/quiz.html
@@ -21,49 +21,53 @@
 	<form method = "post" action = "https://mercury.swin.edu.au/it000000/formtest.php">
 		<fieldset>
 			<legend> Please enter your full name and student ID </legend>
+
 			<p><label for = "fname">First:</label>
-			<input type = "text" id = "fname" name = "fname" maxlength = "30" pattern = "[A-Za-z-]{0,25}" required = "required"></p>
+			<input type = "text" id = "fname" name = "fname" maxlength = "30" pattern = "[A-Za-z-]{0,30}" required = "required"></p>
+
 			<p><label for = "lname">Last:</label>
-			<input type = "text" id = "lname" name = "lname" maxlength = "30" pattern = "[A-Za-z-]{0,25}" required = "required"></p>
+			<input type = "text" id = "lname" name = "lname" maxlength = "30" pattern = "[A-Za-z-]{0,30}" required = "required"></p>
+
 			<p><label for = "studentid">Student ID:</label>
-			<input type = "number" id = "studentid" name = "studentid" required = "required"></p> <!-- ask about validation: pattern and minlength not allowed... -->
+			<input type = "text" id = "studentid" name = "studentid" required = "required" size="10" pattern=".{7,10}"></p> <!-- ask about validation: pattern and minlength not allowed... -->
 		</fieldset>
 		
 		<fieldset>
-		<legend> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
-		<p><label for = "q1"> What is another name for <strong>Voice Technology</strong>? </label>
-		<input type = "text" id = "q1" name = "q1" required = "required"></p>
+			<legend> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
+
+			<p><label for = "q1"> 1. What is another name for <strong>Voice Technology</strong>? </label>
+			<input type = "text" id = "q1" name = "q1" required = "required"></p>
 		
-		<p> What was the Name Given to the First Software Program used in Voice Technology? <br>
-		<label for = "q2a"> Alexa </label>
-		<input type = "radio" id = "q2a" name = "q2" value = "alexa" required = "required">
-		<label for = "q2b"> Siri </label>
-		<input type = "radio" id = "q2b" name = "q2" value = "siri" required = "required">
-		<label for = "q2c"> Cortana </label>
-		<input type = "radio" id = "q2c" name = "q2" value = "cortana" required = "required">
-		<label for = "q2d"> Audrey </label>
-		<input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/></p>
+			<p> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
+			<p><label for = "q2a"> Alexa </label>
+				<input type = "radio" id = "q2a" name = "q2" value = "alexa" required = "required"></p>
+			<p><label for = "q2b"> Siri </label>
+				<input type = "radio" id = "q2b" name = "q2" value = "siri" required = "required"></p>
+			<p><label for = "q2c"> Cortana </label>
+				<input type = "radio" id = "q2c" name = "q2" value = "cortana" required = "required"></p>
+			<p><label for = "q2d"> Audrey </label>
+				<input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/></p>
 		
-		<p> Which of the Following are Real-World Examples of Voice Technology.
-		<label for = "applesiri"> Apple Siri </label>
-		<input type = "checkbox" id = "applesiri" name = "examples[]" value = "applesiri">
-		<label for = "amazon"> Amazon Alexa </label>
-		<input type = "checkbox" id = "amazon" name = "examples[]" value = "amazon">
-		<label for = "google"> Google Assistant </label>
-		<input type = "checkbox" id = "google" name = "examples[]" value = "google">
-		<label for = "dragon"> Dragon Professional </label>
-		<input type = "checkbox" id = "dragon" name = "examples[]" value = "dragon"></p>
+			<p> 3. Which of the following are real-world examples of Voice Technology.</p>
+			<p><label for = "applesiri"> Apple Siri </label>
+				<input type = "checkbox" id = "applesiri" name = "examples[]" value = "applesiri"></p>
+			<p><label for = "amazon"> Amazon Alexa </label>
+				<input type = "checkbox" id = "amazon" name = "examples[]" value = "amazon"></p>
+			<p><label for = "google"> Google Assistant </label>
+				<input type = "checkbox" id = "google" name = "examples[]" value = "google"></p>
+			<p><label for = "dragon"> Dragon Professional </label>
+				<input type = "checkbox" id = "dragon" name = "examples[]" value = "dragon"></p>
 		
-		<p><label for = "q4"> Which of these catagories is Voice Technology related to?  </label><br>
-			<select name="q4" id="q4">
-			<option value = ""> Please Select </option>
-			<option value = "civil"> Civil Engineering </option>
-			<option value = "bio"> Biometrics </option>
-			<option value = "politics"> Politics </option>
-		</select></p>
-		
-		<p><label for = "q5"> Q5: Custom </label><br>
-		<input type = "number" id = "q5" name = "q5"></p>
+			<p><label for = "q4"> 4. Which of these catagories is Voice Technology related to?  </label>
+				<select name="q4" id="q4" required="required">
+					<option value = ""> Please Select </option>
+					<option value = "civil"> Civil Engineering </option>
+					<option value = "bio"> Biometrics </option>
+					<option value = "politics"> Politics </option>
+				</select></p>
+				
+			<p><label for = "q5"> Q5: Custom </label><br>
+			<input type = "number" id = "q5" name = "q5" required="required"></p>
 		</fieldset>
 		
 		<p><input type = "submit" value = "Finish Quiz!"></p>
