--- a/enhancements.html
+++ b/enhancements.html
@@ -5,7 +5,7 @@
 	<meta name = "description" content = "Assignment Part 1 Welcome Page"/>
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
 	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
-	<title> Enhancements </title>
+	<title> Voice Technology - Enhancements </title>
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
