--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
 	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
 	<link href = "style.css" rel = "stylesheet" />
-	<title> Home Page </title>
+	<title> Voice Technology Quiz </title>
 </head>
 <body>
 	<h1> Quiz Page </h1>
