--- a/topic.html
+++ b/topic.html
@@ -6,10 +6,10 @@
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
 	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
 	<link href = "style.css" rel = "stylesheet" />
-	<title> Home Page </title>
+	<title> More on Voice Technology </title>
 </head>
 <body>
-	<h1> Topic Information Page </h1>
+	<h1>  </h1>
 	<header>
 		<nav>
 			<a href = "index.html"> Home </a>
