--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name = "description" content = "Assignment Part 1 Welcome Page"/>
 	<meta name = "keywords" content = "HTML, CSS, Topic, Quiz" />
 	<meta name = "author" content  = "Nelson, Minh, Joy, Uzman and Tom" />
-	<title> Home Page </title>
+	<title> Voice Technology </title>
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
@@ -20,7 +20,7 @@
 	</header>
 	
 	<p>
-		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>. In this 
+		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, normally referred to as <em>voice search</em>, or <em>voice recognition software</em>. Even with the massive development, there are some risks that we still need to be concerned for. Despite this concerns, the future of voice technology will not end anytime soon. There are far more benefits gained, and we are slowly but surely overcoming those challenges with the help of other technologies.
 	</p>
 
 	<footer>
