--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	</header>
 	
 	<p>
-		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, normally referred to as <em>voice search</em>, or <em>voice recognition software</em>. Even with the massive development, there are some risks that we still need to be concerned for. Despite this concerns, the future of voice technology will not end anytime soon. There are far more benefits gained, and we are slowly but surely overcoming those challenges with the help of other technologies.
+		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest developments only emerging in the recent years. With voice technology being easily accessible, it has reach more consumers and concerns are inevitable. Despite of this, the potential of voice technology is apparent, and its growth is not stopping anytime soon. 
+
 	</p>
 
 	<footer>
