--- a/topic.html
+++ b/topic.html
@@ -9,7 +9,7 @@
 	<title> More on Voice Technology </title>
 </head>
 <body>
-	<h1>  </h1>
+	<h1> Voice Technology </h1>
 	<header>
 		<nav>
 			<a href = "index.html"> Home </a>
@@ -18,7 +18,10 @@
 			<a href = "enhancements.html"> Enhancement </a>
 		</nav>
 	</header>
-	<h2> Sub-Header Example </h2>
+	<h2> Purpose </h2>
+	<p>
+		<strong>Voice Technology</strong>, also known as <em>voice search</em> or <em>voice recognition software</em> are programs that can recognise and record audible commands of the human language and translate them into code i.e. computer language, that can interact with other programs.
+	</p>
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
