--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
-	<h1> Voice Technology </h1>
-	<header>
-		<nav>
-			<a href = "index.html"> Home </a>
-			<a href = "topic.html"> Topic </a>
-			<a href = "quiz.html"> Quiz </a>
-			<a href = "enhancements.html"> Enhancement </a>
-		</nav>
-	</header>
+	<div class="header">
+		<h1> Voice Technology </h1>
+	</div>
+	<div class="topnav">
+		<a href = "index.html"> Home </a>
+		<a href = "topic.html"> Topic </a>
+		<a href = "quiz.html"> Quiz </a>
+		<a href = "enhancements.html"> Enhancement </a>
+	</div>
+	<a href="index.html"><img src="vt1.jpg" alt="Voice Technology" width="700" height="350"></a>
 	
 	<p>
 		There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest developments only emerging in the recent years. With voice technology being easily accessible, it has reach more consumers and concerns are inevitable. Despite of this, the potential of voice technology is apparent, and its growth is not stopping anytime soon. 
-
 	</p>
 
 	<footer>
