--- a/topic.html
+++ b/topic.html
@@ -9,19 +9,28 @@
 	<title> More on Voice Technology </title>
 </head>
 <body>
-	<h1> Voice Technology </h1>
-	<header>
-		<nav>
-			<a href = "index.html"> Home </a>
-			<a href = "topic.html"> Topic </a>
-			<a href = "quiz.html"> Quiz </a>
-			<a href = "enhancements.html"> Enhancement </a>
-		</nav>
-	</header>
+	<div class="header">
+		<h1> Voice Technology </h1>
+	</div>
+	<div class="topnav">
+		<a href = "index.html"> Home </a>
+		<a href = "topic.html"> Topic </a>
+		<a href = "quiz.html"> Quiz </a>
+		<a href = "enhancements.html"> Enhancement </a>
+	</div>
 	<h2> Purpose </h2>
 	<p>
 		<strong>Voice Technology</strong>, also known as <em>voice search</em> or <em>voice recognition software</em> are programs that can recognise and record audible commands of the human language and translate them into code i.e. computer language, that can interact with other programs.
 	</p>
+	<h3>Uses:</h3>
+	<!-- do you guys think we should elaborate on these -->
+	<ul>
+		<li>transcription and dictation</li> 
+		<li>voice assistans</li>
+		<li>automotive command and control</li>
+		<li>social media messengers</li>
+		<li>customer experience</li>
+	</ul>
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
