--- a/enhancements.html
+++ b/enhancements.html
@@ -9,15 +9,16 @@
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
-    <h1>Enhancement</h1>
-	<header>
-		<nav>
-			<a href = "index.html"> Home </a>
-			<a href = "topic.html"> Topic </a>
-			<a href = "quiz.html"> Quiz </a>
-			<a href = "enhancements.html"> Enhancement </a>
-		</nav>
-	</header>
+    <div class="header">
+		<h1> Enhancement </h1>
+	</div>
+	<div class="topnav">
+		<a href = "index.html"> Home </a>
+		<a href = "topic.html"> Topic </a>
+		<a href = "quiz.html"> Quiz </a>
+		<a href = "enhancements.html"> Enhancement </a>
+	</div>
+    
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
