--- a/enhancements.html
+++ b/enhancements.html
@@ -9,15 +9,15 @@
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
-    <div class="header">
-		<h1> Enhancement </h1>
-	</div>
-	<div class="topnav">
-		<a href = "index.html"> Home </a>
+    <header>
+		<h1>Voice Technology</h1>
+		<nav>
+			<a href = "index.html"> Home </a>
 		<a href = "topic.html"> Topic </a>
 		<a href = "quiz.html"> Quiz </a>
 		<a href = "enhancements.html"> Enhancement </a>
-	</div>
+		</nav>
+	</header>
     
 	<footer>
 		Contact Our Team Via E-Mail:
