--- a/quiz.html
+++ b/quiz.html
@@ -9,15 +9,15 @@
 	<title> Voice Technology Quiz </title>
 </head>
 <body>
-	<div class="header">
-		<h1> Quiz </h1>
-	</div>
-	<div class="topnav">
-		<a href = "index.html"> Home </a>
+	<header>
+		<h1>Voice Technology</h1>
+		<nav>
+			<a href = "index.html"> Home </a>
 		<a href = "topic.html"> Topic </a>
 		<a href = "quiz.html"> Quiz </a>
 		<a href = "enhancements.html"> Enhancement </a>
-	</div>
+		</nav>
+	</header>
 	<form method = "post" action = "https://mercury.swin.edu.au/it000000/formtest.php">
 		<fieldset>
 			<legend> Please enter your full name and student ID </legend>
