--- a/topic.html
+++ b/topic.html
@@ -9,15 +9,15 @@
 	<title> More on Voice Technology </title>
 </head>
 <body>
-	<div class="header">
-		<h1> Voice Technology </h1>
-	</div>
-	<div class="topnav">
-		<a href = "index.html"> Home </a>
+	<header>
+		<h1>Voice Technology</h1>
+		<nav>
+			<a href = "index.html"> Home </a>
 		<a href = "topic.html"> Topic </a>
 		<a href = "quiz.html"> Quiz </a>
 		<a href = "enhancements.html"> Enhancement </a>
-	</div>
+		</nav>
+	</header>
 	<h2> Purpose </h2>
 	<p>
 		<strong>Voice Technology</strong>, also known as <em>voice search</em> or <em>voice recognition software</em> are programs that can recognise and record audible commands of the human language and translate them into code i.e. computer language, that can interact with other programs.
@@ -31,6 +31,79 @@
 		<li>social media messengers</li>
 		<li>customer experience</li>
 	</ul>
+	<h3>Benefits:</h3>
+	<ul>
+		<li>useful for those with disabilities (especially for the eyes and limbs)</li>
+		<li>can be connected to other devices and smart appliances, whiche helps to complete tasks more easily and efficiently</li>
+		<li>conveniency</li>
+		<li>can remember previous interactions and become more suitable to the user the longer the usage is</li>
+	</ul>
+	<h3>Disadvantages:</h3>
+	<ul>
+		<li>expensive, since they usually come as a function of smart devices</li>
+		<li>inaccuracy in recognising voice</li>
+		<li>many tasks cannot be done through voice technology due to the complexity of the programming involved</li>
+		<li>breach of privacy</li>
+	</ul>
+	<h2>Development</h2>
+	<p>
+		The first inkling of voice technology came about through the efforts of <em>Thomas Edison</em>. He created the device from a combination of his previous inventions: telephone and telegraph. The thought that he could record telephone messages, similar to how telegraphic messages and words are recorded through indentations on paper is what sparked him to create the first device that could record sound and play it back. This decide was created on 4th December, 1877.
+	</p>
+	<p>
+		Next came the <strong>Voder</strong>, the first speech synthesiser, a machine created to mimic how humans talk, which was invented by <em>A team</em> of engineers at <em>Bell Labs</em>, led by <em>Homer Dudley</em> in 1936 as an attempt to further communication technology. The first real voice recognition software was also made by <em>Bell Labs</em>, who created <strong>Audrey</strong>, a program capable of recognising the digits from 0 to 9 with 90% accuracy.
+	</p>
+	<h2>Management</h2>
+	<p>
+		It's a competitive and open market. There is no central body which governs voice recognition technology. However, there are prominent developers and companies that contribute tremendously in the field:
+	</p>
+		<ol>
+			<li>Nuance communication
+				<ul>
+					<li>uses AI and voice technologyto support multiple industries i.e. healthcare, telecom, financial services, etc.</li>
+				</ul>
+			</li>
+			<li>Google LLC
+				<ul>
+					<li>home automation using voice technology via <em>Google Assistant</em></li>
+				</ul>
+			</li>
+			<li>Amazon
+				<ul>
+					<li>virtual assistant using speech recognition <em>Alexa</em> to support daily life activities</li>
+				</ul>
+			</li>
+			<li>Apple
+				<ul>
+					<li><em>Siri</em> helps people navigate around the phone</li>
+				</ul>
+			</li>
+		</ol>
+	<ul>
+		<li>Examples of voice technology and prominent factors in the industry:
+			<ul>
+				<li>mainstream voice technology:
+					<ul>
+						<li>2011: Apple Siri</li>
+						<li>2014: Amazon Alexa</li>
+						<li>2016: Google Assistant</li>
+					</ul>
+				</li>
+				<li>most used software nowadays:
+					<ul>
+						<li>Dragon professional</li>
+						<li>Dragon anywhere</li>
+						<li>Siri</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+	</ul>	
+	<h2>Growth and Future</h2>
+	<p>
+		<strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. It was introduced by <em>Thomas Edison</em> into the world and made its first evolution in 1950, when <em>Bell Labs</em> invented <strong>Voder</strong>, then <strong>Audrey</strong>, an automatic digit recognition machine. This was then enhanced overtime with more vocabularies recognised either by speech patterns, fixed templates, or sounds and pitch. It reached a major breakthrough in 2010 where <em>Google</em> invented an application called <strong>Google Voice Search</strong>. With this advancement, it paved the way for <em>Siri</em> whose success only pushed the voice technology to shoot up. Because of this, companies now created their own digital assistants we now widely use in our everyday life such as <em>Siri, Amazon Alexa, Cortana, Google, Bixby</em>, etc. Integrations of voice assistants into our daily gadgets i.e. mobile phones, pushed more devices that are used in different settings i.e. home, hospitals, schools, cars, businesses, and more. Since more consumers are leaning towards the digital world, indsutries are now widely adopting this era, where voice technology benefits businesses' capability to generate revenue, improve efficiency and increase productivity. According to the <em>Industry Report: Trends and Predictions for Voice Technology in 2021</em> by Speechmatics, 68% of respondents currently have voice strategy in place in their company compared with 50% in 2020. Those who doesn't have voice strategy, 60% said that it is something they will consider in the next 5 years. With the pandemic <em>COVID-19</em> hitting globally, companies are more inclines to shift into voice technology, where many industries like media and entertaiinment, banking, financial services, insurance, healthcare and life sciences, education, government, etc have proven that voice technology's capabilities are limitless, and there is no stopping it.
+	</p>
+	<h2>Related Technology</h2>
+	<p></p>
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
