--- a/topic.html
+++ b/topic.html
@@ -31,6 +31,7 @@
 		<li>social media messengers</li>
 		<li>customer experience</li>
 	</ul>
+	<a href=""><img src="vt3.png" alt="Voice Technology" width="700" height="400"></a>
 	<h3>Benefits:</h3>
 	<ul>
 		<li>useful for those with disabilities (especially for the eyes and limbs)</li>
@@ -99,11 +100,15 @@
 		</li>
 	</ul>	
 	<h2>Growth and Future</h2>
+	<a href=""><img src="history.jpg" alt="Voice Technology" width="700" height="350"></a>
 	<p>
 		<strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. It was introduced by <em>Thomas Edison</em> into the world and made its first evolution in 1950, when <em>Bell Labs</em> invented <strong>Voder</strong>, then <strong>Audrey</strong>, an automatic digit recognition machine. This was then enhanced overtime with more vocabularies recognised either by speech patterns, fixed templates, or sounds and pitch. It reached a major breakthrough in 2010 where <em>Google</em> invented an application called <strong>Google Voice Search</strong>. With this advancement, it paved the way for <em>Siri</em> whose success only pushed the voice technology to shoot up. Because of this, companies now created their own digital assistants we now widely use in our everyday life such as <em>Siri, Amazon Alexa, Cortana, Google, Bixby</em>, etc. Integrations of voice assistants into our daily gadgets i.e. mobile phones, pushed more devices that are used in different settings i.e. home, hospitals, schools, cars, businesses, and more. Since more consumers are leaning towards the digital world, indsutries are now widely adopting this era, where voice technology benefits businesses' capability to generate revenue, improve efficiency and increase productivity. According to the <em>Industry Report: Trends and Predictions for Voice Technology in 2021</em> by Speechmatics, 68% of respondents currently have voice strategy in place in their company compared with 50% in 2020. Those who doesn't have voice strategy, 60% said that it is something they will consider in the next 5 years. With the pandemic <em>COVID-19</em> hitting globally, companies are more inclines to shift into voice technology, where many industries like media and entertaiinment, banking, financial services, insurance, healthcare and life sciences, education, government, etc have proven that voice technology's capabilities are limitless, and there is no stopping it.
 	</p>
 	<h2>Related Technology</h2>
-	<p></p>
+	<p>
+		Voice Technology, as part of the biometric technology tree, also possesses its owen sibling technology branches that focuses on recognising and identifying other human biological features. The biosignature that can be anything from <em>facial features, fingerprints, iris, etc.</em> These biometric features are used for security reasons and identifying other people. Compared to voice technology, these other biometric signatures are not able to convey orders and information as effectively as human speech can.
+	</p>
+	<a href=""><img src="vt.jpg" alt="Voice Technology" width="700" height="350"></a>
 	<footer>
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
