--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		</nav>
 	</header>
 
-	<a href="index.html"><img src="vt1.jpg" alt="Voice Technology" width="700" height="350"></a>
+	<div class="photo">
+		<a href="index.html"><img src="vt1.jpg" alt="Voice Technology" width="700" height="350"></a>
+	</div>
 	
 	<div class="intro">
 		<p>
