--- a/enhancements.html
+++ b/enhancements.html
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
     
-	<footer>
+	<footer id="thefooter">
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
 		<a href = "mailto:augiaminh14@gmail.com"> Minh </a>
