--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</p>
 	</div>
 
-	<footer>
+	<footer id="thefooter">
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
 		<a href = "mailto:augiaminh14@gmail.com"> Minh </a>
