--- a/topic.html
+++ b/topic.html
@@ -115,7 +115,7 @@
 	<div class="photo">
 		<a href=""><img src="vt.jpg" alt="Voice Technology" width="700" height="350"></a>
 	</div>
-	<footer>
+	<footer id="thefooter">
 		Contact Our Team Via E-Mail:
 		<a href = "mailto:nelsonhain@gmail.com"> Nelson </a>
 		<a href = "mailto:augiaminh14@gmail.com"> Minh </a>
