--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link href = "style.css" rel = "stylesheet" />
 </head>
 <body>
-	<header>
+	<header  class="sticky">
 		<h1>Voice Technology</h1>
 		<nav>
-			<a href = "index.html"> Home </a>
+		<a href = "index.html"> Home </a>
 		<a href = "topic.html"> Topic </a>
 		<a href = "quiz.html"> Quiz </a>
 		<a href = "enhancements.html"> Enhancement </a>
